components: Fix alignment of Pills in GtkTextViews
Fixes #880

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -190,6 +190,10 @@ location-viewer .map-marker {
   color: @accent_color;
 }
 
+entry .inline-pill {
+	margin-bottom: -0.5em;
+}
+
 
 /* Login */
 
